--- a/package.json
+++ b/package.json
@@ -10,11 +10,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/push-notification-ios": "^1.10.1",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.25.0",
     "expo": "~44.0.0",
+    "expo-location": "~14.0.1",
+    "expo-permissions": "^13.1.0",
     "expo-status-bar": "~1.2.0",
+    "expo-task-manager": "~10.1.0",
+    "firebase": "8.2.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-background-geolocation": "^4.4.4",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
+    "react-native-location": "^2.5.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
